Fixed z-index for thumb images

--- a/css/styles.css
+++ b/css/styles.css
@@ -407,7 +407,7 @@ header {
     transition: all 3s ease-in-out;
 }
 
-.project-thumb-container .project-info{position: absolute; top: 44%; left: 6%; color: #eee; font-weight: 100; z-index: 10000;}
+.project-thumb-container .project-info{position: absolute; top: 44%; left: 6%; color: #eee; font-weight: 100; z-index: 5000;}
 .project-thumb-container .project-info p{font-size: 1.25em; color: #999999; margin: .6em 0; }
 .project-thumb-container .project-info h3{text-transform: uppercase; font-size: 1.5em; font-family: 'GothamBold'; color: #3b3b3b;}
 .project-thumb-container .project-info .white{color: #ffffff;}
